css/style.css
body {
    margin: 0px auto;
}

/* Header stylings */

header {
    height: calc(100vh - 50px);
    background: linear-gradient(#222222e0, #222222e0),
    url("/images/starry-sky-1654074_1280.jpg");
    padding-top: 50px; 
    background-size: cover;
    background-repeat: no-repeat;
    text-align: center;
}

.headertext {
    text-align: center;
    padding-left: 30%;
    padding-right: 30%;
}

.textAnimation {
	-webkit-animation: text-focus-in 3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
	animation: text-focus-in 3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
}

@-webkit-keyframes text-focus-in {
    0% {
      -webkit-filter: blur(12px);
              filter: blur(12px);
      opacity: 0;
    }
    100% {
      -webkit-filter: blur(0px);
              filter: blur(0px);
      opacity: 1;
    }
  }
  @keyframes text-focus-in {
    0% {
      -webkit-filter: blur(12px);
              filter: blur(12px);
      opacity: 0;
    }
    100% {
      -webkit-filter: blur(0px);
              filter: blur(0px);
      opacity: 1;
    }
  }

/**/

/* Button Styling */

#scrollToStart {
    border-radius: 3rem;
    cursor: pointer;
    border: 3px solid #FF4F19;
    background: rgba(255, 255, 255, 0);
    padding: 15px;
    text-transform: uppercase;
    color: #fff;
    font-family: 'Josefin Sans', sans-serif;
    font-weight: bold;
    text-align: center;
    transition: all 1s ease 0s;
}

#scrollToStart:hover {
    border: 3px solid #DB3F3D;
    font-size: 1.1em;
    letter-spacing: 0.1em;
    transition: all 1s ease 0s;
}

#scrollToStart:focus {
    outline: 0;
}

/**/

/* Planetstyling */

#mars {
    position: relative;
    transform: rotate(-25deg);
    height: 30vh;
    width: auto;
}

/**/

/* Boxes, grids, ul's and li styling */

#data {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    padding: 20px;
    grid-row-gap: 5px;
    grid-column-gap: 5px;
}

.filteroptions {
    display: grid;
    grid-template-columns: repeat(2,1fr);
    padding: 20px;
    grid-column-gap: 5px;
}

.filterbox {
    padding: 20px;
    box-sizing: border-box;
    border: 1px solid black;
    display: flex;
    justify-content: space-around;
}

.box {
    box-sizing: border-box;
    border: 3px solid black;
    padding: 5px;
    color: black;
}

.box:hover {
    -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
    transition: all 0.5s ease 0s;
    cursor: pointer;
}

.bigbox {
    height: 100vh;
    width: calc(100vw - 50px);
    box-sizing: border-box;
    border: 3px solid black;
    padding: 5px;
    color: black;
}

ul {
    padding: 0px;
}

li {
    list-style-type: none;
}

h1, h2, h3 {
    font-family: 'Righteous', cursive;
}

p, li, label, button  {
    font-family: 'Lato', sans-serif;
}

.bigbox li:nth-child(9) {
    box-sizing: border-box;
    border-bottom: 1px solid black;
    padding-bottom: 1em;
}

.box li:nth-child(5) {
    box-sizing: border-box;
    border-bottom: 1px solid black;
    padding-bottom: 1em;
}
/**/

